fix: wrong paths

--- a/index.html
+++ b/index.html
@@ -476,19 +476,19 @@
                     <label>
                         <input type="radio" name="messenger" value="telegram" class="form-radio">
                         <div class="custom-radio__form-button"></div>
-                        <img src="/src/image/quiz/form/telegram.svg" alt="Telegram">
+                        <img src="./src/image/quiz/form/telegram.svg" alt="Telegram">
                         <p>Telegram</p>
                     </label>
                     <label>
                         <input type="radio" name="messenger" value="viber" class="form-radio">
                         <div class="custom-radio__form-button"></div>
-                        <img src="/src/image/quiz/form/viber.svg" alt="Viber">
+                        <img src="./src/image/quiz/form/viber.svg" alt="Viber">
                         <p>Viber</p>
                     </label>
                     <label>
                         <input type="radio" name="messenger" value="whatsApp" class="form-radio">
                         <div class="custom-radio__form-button"></div>
-                        <img src="/src/image/quiz/form/whatsApp.svg" alt="What's App">
+                        <img src="./src/image/quiz/form/whatsApp.svg" alt="What's App">
                         <p>What's App</p>
                     </label>
                 </div>
